lab1/Test/L1-A-7-89.cmm
struct BTns7M7Ug66 NSL62ro8Af6SU [ 1379024655 ] , 
  DW 

;
int ;
int ;
struct {
};
int ;
int LcIkc1VnlPtS2KzT ( int RJqtS_lIV2pamZv7l , int 
  qTs1Bm4qLepPaCQnh ) {
  float AdpRmITXdf = aSUFU8Yt5suEw && TOF < - ! C28 
    ( MvCM99R719 = qwFjPXCR = dluCqsLQxkv8PXbHlkY || q5rA9yD_vkM 
    <= yQ + Qqh7MTU * ! ! n8yOXH7rPoIyh [ F3_wA = eY0t1bxe62vvpOXP9 
    >= IVjeTjnV_LD / ykB8zG [ Ppv8LVH4rzSh1B = EsMlGuqtOaZKL62w 
    > CDI3w '( Qnafoht , t8BQ2QiPVp0VA || V_QZGBn2MXsuRDb 
    && xbNXCT42JyY / sxBUD5K [ gqB623Ls == fq8lsXkkerckEsMU8yyw 
    * ! ( isvbJ0lsPEjwEHPW5 != c ) ] ) ] - ! 673933475.532978675 
    * - 1637223031 * S6dLCwFa3j6 ] / RGENWXgXSdLg4NF0O 
    ( ) . mY6Q ) ;
$}
struct n3IhzYSmb {
}UwY5bIC2myMEQVWT 
;
int yV6w6Na1PUk ( ) {
}
int NnZiqRhlg ( ) {
  int KXyqDzALj4aXmQ_ , byRAIWtPgkcLvsQZpuT ;
  if ( I8LsAZeV4U3_Vl )   return ITvGJ4 ;

}
int \G6te4N ( ) {
}
int ;
int ;
int yR46kq2 ( ) {
  GJFbSqcG8Ql5ss62dAeI ;
  if ( niANaWArOVGjhG5ob )   while ( b9tmP )   if 
    ( f6rPaO154LTD9ZB )   CQUl5D5feJT7N06 ;
else {
  }

else   if ( J )   hZjhuq ;


}
int ;
